--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,6 +13,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+
+
+
 // Breakpoints.
 
 	@include breakpoints((
@@ -311,6 +314,7 @@
 		&.fit {
 			display: block;
 			width: 100%;
+
 		}
 
 		&.left {
@@ -777,12 +781,13 @@
 
 	#header {
 		@include vendor('transition', 'opacity 2s ease-in-out');
-		position: relative;
+		// position: relative;
+		display:flex;
 		color: #fff;
 		text-shadow: 0 0 0.5px rgba(255, 255, 255, 0.25);
 		text-align: center;
 		margin: 0;
-		padding: 14em 0 14em 0;
+	
 		cursor: default;
 
 		header {
@@ -902,6 +907,10 @@
 				border-bottom-color: rgba(255, 255, 255, 0);
 			}
 		}
+	}
+
+	.resume a{
+		display:block;
 	}
 
 /* Footer */
@@ -1429,3 +1438,5 @@
 			}
 
 	}
+
+
